--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -1,12 +1,59 @@
 <Application
  x:Class="WolvenKit.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
-    xmlns:hc="https://handyorg.github.io/handycontrol">
+ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+ xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+ xmlns:hc="https://handyorg.github.io/handycontrol"
+ xmlns:local="clr-namespace:WolvenKit.Views.Foundation"
+ xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+ xmlns:vm="clr-namespace:WolvenKit.Views.ViewModels"
+ >
+
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <vm:RootViewModel x:Key="ViewModel" />
+                </ResourceDictionary>
+
+                <!--  Global Styles  -->
+                <ResourceDictionary>
+                    <Style x:Key="SidePanelContainerBorderStyle" TargetType="Border">
+                        <Setter Property="Margin" Value="0,16,20,-106" />
+                        <Setter Property="Padding" Value="16,10,6,16" />
+                        <Setter Property="Background">
+                            <Setter.Value>
+                                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                                    <GradientStop Offset="0" Color="#bb222222" />
+                                    <GradientStop Offset="0.6" Color="#aa444444" />
+                                    <GradientStop Offset="1" Color="#99222222" />
+                                </LinearGradientBrush>
+                            </Setter.Value>
+                        </Setter>
+                        <Setter Property="BorderBrush" Value="#66444444" />
+                        <Setter Property="BorderThickness" Value="1" />
+                        <Setter Property="DockPanel.Dock" Value="Right" />
+                    </Style>
+                </ResourceDictionary>
+
+                <!--  Converters  -->
+                <ResourceDictionary>
+                    <local:TimeSpanToSecondsConverter x:Key="TimeSpanToSecondsConverter" />
+                    <local:TimeSpanFormatter x:Key="TimeSpanFormatter" />
+                    <local:PercentageFormatter x:Key="PercentageFormatter" />
+                    <local:ByteFormatter x:Key="ByteFormatter" />
+                    <local:BitFormatter x:Key="BitFormatter" />
+                    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+                    <local:PlaylistDurationFormatter x:Key="PlaylistDurationFormatter" />
+                    <local:PlaylistEntryThumbnailConverter x:Key="PlaylistEntryThumbnailConverter" />
+                    <local:UtcDateToLocalTimeString x:Key="UtcDateToLocalTimeString" />
+                    <local:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+                    <local:ClosedCaptionsChannelConverter x:Key="ClosedCaptionsChannelConverter" />
+                </ResourceDictionary>
+
+                <!--  Resource Dictionaries  -->
+                <ResourceDictionary Source="pack://application:,,,/WolvenKit;Component/Themes/App.Icons.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/WolvenKit;Component/Themes/App.Styles.xaml" />
+
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Crimson.xaml" />
 
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
@@ -24,7 +71,8 @@
             <Style
              x:Key="MessageBoxPrimaryButtonStyle"
              BasedOn="{StaticResource {x:Type Button}}"
-             TargetType="Button">
+             TargetType="Button"
+             >
                 <Setter Property="MinWidth" Value="88" />
                 <Setter Property="Visibility" Value="{Binding IsEnabled, RelativeSource={RelativeSource Self}, Converter={StaticResource Boolean2VisibilityConverter}}" />
                 <Setter Property="Margin" Value="5,0" />
@@ -41,12 +89,14 @@
              Stretch="Uniform"
              TileMode="Tile"
              Viewport="0,0,157,157"
-             ViewportUnits="Absolute">
+             ViewportUnits="Absolute"
+             >
                 <DrawingBrush.Drawing>
                     <ImageDrawing
                      o:Freeze="True"
                      ImageSource="pack://application:,,,/Resources/Media/Images/Application/Cloud.png"
-                     Rect="0,0,157,157" />
+                     Rect="0,0,157,157"
+                     />
                 </DrawingBrush.Drawing>
             </DrawingBrush>
 
