--- a/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/UserPageView.xaml
@@ -3,8 +3,10 @@
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
  xmlns:catel="http://schemas.catelproject.com"
+ xmlns:ffme="clr-namespace:Unosquare.FFME;assembly=ffme.win"
  xmlns:hc="https://handyorg.github.io/handycontrol"
- xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+ xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+ >
 
     <catel:UserControl.Resources>
         <ResourceDictionary>
@@ -16,7 +18,8 @@
                             <Border
                              Background="{TemplateBinding Background}"
                              BorderBrush="{TemplateBinding BorderBrush}"
-                             BorderThickness="{TemplateBinding BorderThickness}">
+                             BorderThickness="{TemplateBinding BorderThickness}"
+                             >
                                 <Viewport3D x:Name="PART_Viewport3D">
                                     <Viewport3D.Camera>
                                         <PerspectiveCamera
@@ -24,7 +27,8 @@
                                          FieldOfView="80"
                                          LookDirection="0,0,-1"
                                          Position="0,0,3"
-                                         UpDirection="0,1,0" />
+                                         UpDirection="0,1,0"
+                                         />
                                     </Viewport3D.Camera>
                                     <Viewport3D.Children>
                                         <ModelVisual3D>
@@ -53,25 +57,29 @@
      MinWidth="300"
      MinHeight="300"
      hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}"
-     Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
+     Background="{DynamicResource MahApps.Brushes.ThemeBackground}"
+     >
 
         <StackPanel
          Margin="5"
          HorizontalAlignment="Right"
          VerticalAlignment="Top"
-         Orientation="Horizontal">
+         Orientation="Horizontal"
+         >
 
             <TextBlock
              HorizontalAlignment="Center"
              VerticalAlignment="Center "
              FontSize="20"
-             Text="Profile" />
+             Text="Profile"
+             />
             <hc:Divider
              Height="45"
              Margin="15"
              HorizontalAlignment="Center"
              VerticalAlignment="Center"
-             Orientation="Vertical" />
+             Orientation="Vertical"
+             />
             <hc:AnimationPath
              Width="45"
              Height="45"
@@ -83,7 +91,8 @@
              Stretch="Uniform"
              Stroke="{DynamicResource MahApps.Brushes.ThemeForeground}"
              StrokeThickness="1.5"
-             Duration="00:00:06">
+             Duration="00:00:06"
+             >
                 <hc:AnimationPath.LayoutTransform>
                     <RotateTransform Angle="180" />
                 </hc:AnimationPath.LayoutTransform>
@@ -107,7 +116,8 @@
                 <Border
                  Margin="15,0,5,10"
                  Background="{DynamicResource RegionBrush}"
-                 CornerRadius="10">
+                 CornerRadius="10"
+                 >
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="150" />
@@ -118,41 +128,49 @@
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Stretch"
                          Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                         CornerRadius="10" />
+                         CornerRadius="10"
+                         />
                         <Grid
                          Grid.Column="1"
                          Margin="0,0,0,0"
-                         VerticalAlignment="Center">
+                         VerticalAlignment="Center"
+                         >
                             <StackPanel>
                                 <Border
                                  Height="30"
                                  Margin="0,5,10,5"
                                  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                 CornerRadius="5">
+                                 CornerRadius="5"
+                                 >
                                     <TextBlock
                                      Margin="5,0,0,0"
                                      VerticalAlignment="Center"
-                                     Text="User" />
+                                     Text="User"
+                                     />
                                 </Border>
                                 <Border
                                  Height="30"
                                  Margin="0,5,10,5"
                                  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                 CornerRadius="5">
+                                 CornerRadius="5"
+                                 >
                                     <TextBlock
                                      Margin="5,0,0,0"
                                      VerticalAlignment="Center"
-                                     Text="User" />
+                                     Text="User"
+                                     />
                                 </Border>
                                 <Border
                                  Height="30"
                                  Margin="0,5,10,5"
                                  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                 CornerRadius="5">
+                                 CornerRadius="5"
+                                 >
                                     <TextBlock
                                      Margin="5,0,0,0"
                                      VerticalAlignment="Center"
-                                     Text="User" />
+                                     Text="User"
+                                     />
                                 </Border>
                             </StackPanel>
                         </Grid>
@@ -163,7 +181,8 @@
                 <Border
                  Margin="5,0,15,10"
                  Background="{DynamicResource RegionBrush}"
-                 CornerRadius="10">
+                 CornerRadius="10"
+                 >
                     <Grid FlowDirection="RightToLeft">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="150" />
@@ -174,41 +193,49 @@
                          HorizontalAlignment="Stretch"
                          VerticalAlignment="Stretch"
                          Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                         CornerRadius="10" />
+                         CornerRadius="10"
+                         />
                         <Grid
                          Grid.Column="1"
                          Margin="0,0,0,0"
-                         VerticalAlignment="Center">
+                         VerticalAlignment="Center"
+                         >
                             <StackPanel>
                                 <Border
                                  Height="30"
                                  Margin="0,5,10,5"
                                  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                 CornerRadius="5">
+                                 CornerRadius="5"
+                                 >
                                     <TextBlock
                                      Margin="5,0,0,0"
                                      VerticalAlignment="Center"
-                                     Text="User" />
+                                     Text="User"
+                                     />
                                 </Border>
                                 <Border
                                  Height="30"
                                  Margin="0,5,10,5"
                                  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                 CornerRadius="5">
+                                 CornerRadius="5"
+                                 >
                                     <TextBlock
                                      Margin="5,0,0,0"
                                      VerticalAlignment="Center"
-                                     Text="User" />
+                                     Text="User"
+                                     />
                                 </Border>
                                 <Border
                                  Height="30"
                                  Margin="0,5,10,5"
                                  Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
-                                 CornerRadius="5">
+                                 CornerRadius="5"
+                                 >
                                     <TextBlock
                                      Margin="5,0,0,0"
                                      VerticalAlignment="Center"
-                                     Text="User" />
+                                     Text="User"
+                                     />
                                 </Border>
                             </StackPanel>
                         </Grid>
@@ -220,13 +247,15 @@
                 <Border
                  Margin="15,0,15,10"
                  Background="{DynamicResource RegionBrush}"
-                 CornerRadius="10" />
+                 CornerRadius="10"
+                 />
             </Grid>
 
             <Grid
              Grid.Row="2"
              Grid.RowSpan="2"
-             Grid.ColumnSpan="2">
+             Grid.ColumnSpan="2"
+             >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="1*" />
@@ -236,39 +265,46 @@
                  Grid.Column="0"
                  Margin="15,0,5,15"
                  Background="{DynamicResource RegionBrush}"
-                 CornerRadius="15">
+                 CornerRadius="15"
+                 >
 
                     <Border
                      Grid.Column="0"
                      Margin="1,170,1,15"
-                     Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" />
+                     Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
+                     />
                 </Border>
                 <Border
                  Grid.Column="1"
                  Margin="5,0,5,15"
                  Background="{DynamicResource RegionBrush}"
-                 CornerRadius="15">
+                 CornerRadius="15"
+                 >
                     <Border
                      Grid.Column="0"
                      Margin="1,170,1,15"
-                     Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" />
+                     Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
+                     />
                 </Border>
                 <Border
                  Grid.Column="2"
                  Margin="5,0,15,15"
                  Background="{DynamicResource RegionBrush}"
-                 CornerRadius="15">
+                 CornerRadius="15"
+                 >
                     <Border
                      Grid.Column="0"
                      Margin="1,170,1,15"
-                     Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" />
+                     Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}"
+                     />
                 </Border>
 
                 <Grid
                  Width="250"
                  Height="150"
                  Margin="15,10,5,15"
-                 VerticalAlignment="Top">
+                 VerticalAlignment="Top"
+                 >
                     <hc:CoverFlow x:Name="CoverFlowMain" Style="{StaticResource CoverFlowBaseStyle2}" />
                 </Grid>
                 <Grid
@@ -276,7 +312,8 @@
                  Width="250"
                  Height="150"
                  Margin="5,10,5,15"
-                 VerticalAlignment="Top">
+                 VerticalAlignment="Top"
+                 >
                     <hc:CoverFlow x:Name="asd3423" Style="{StaticResource CoverFlowBaseStyle2}" />
                 </Grid>
                 <Grid
@@ -284,7 +321,8 @@
                  Width="250"
                  Height="150"
                  Margin="5,10,15,15"
-                 VerticalAlignment="Top">
+                 VerticalAlignment="Top"
+                 >
                     <hc:CoverFlow x:Name="dsfdsf" Style="{StaticResource CoverFlowBaseStyle2}" />
                 </Grid>
             </Grid>
@@ -298,7 +336,11 @@
              Background="Transparent"
              BorderBrush="Transparent"
              Content="COMING SOON"
-             FontSize="50" />
+             FontSize="50"
+             />
+
+
+
         </Grid>
     </Grid>
 </catel:UserControl>
