--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -539,6 +539,7 @@
          Name="guide"
          AllowDismiss="True"
          Animate="True"
+         Visibility="Hidden"
          />
 
         <Grid x:Name="Fgrid1" />
