--- a/WolvenKit/Views/Editor/Basic/LogView.xaml
+++ b/WolvenKit/Views/Editor/Basic/LogView.xaml
@@ -46,7 +46,7 @@
          EnableTimestamp="True"
          ErrorMessageBrush="Red"
          IgnoreCatelLogging="True"
-         InfoMessageBrush="White"
+         InfoMessageBrush="LightGray"
          ScrollMode="AutoScrollPriority"
          ShowDebug="False"
          ShowError="False"
