--- a/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
+++ b/WolvenKit/Views/Editor/Basic/PropertiesView.xaml
@@ -2,15 +2,19 @@
  x:Class="WolvenKit.Views.Editor.PropertiesView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+ xmlns:ab3d="clr-namespace:Ab3d.Controls;assembly=Ab3d.PowerToys"
  xmlns:behavior="clr-namespace:WolvenKit.Functionality.Behavior"
  xmlns:c="clr-namespace:WolvenKit.Functionality.WKitGlobal.Helpers"
+ xmlns:cameras="clr-namespace:Ab3d.Cameras;assembly=Ab3d.PowerToys"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+ xmlns:dxControls="clr-namespace:Ab3d.DirectX.Controls;assembly=Ab3d.DXEngine.Wpf"
  xmlns:ei="http://schemas.microsoft.com/xaml/behaviors"
  xmlns:hc="https://handyorg.github.io/handycontrol"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:model="clr-namespace:WolvenKit.Models;assembly=WolvenKit.App"
+ xmlns:visuals="clr-namespace:Ab3d.Visuals;assembly=Ab3d.PowerToys"
  d:DesignHeight="450"
  d:DesignWidth="800"
  FontSize="10"
@@ -35,7 +39,139 @@
         <Grid>
 
             <StackPanel>
+                <Grid Name="RootGrid" Height="250">
+                    <Border Name="ViewportBorder" Background="Transparent">
+                        <dxControls:DXViewportView
+                         Name="MainDXViewportView"
+                         BackgroundColor="Transparent"
+                         PresentationType="DirectXImage"
+                         >
 
+                            <Viewport3D Name="MainViewport">
+                                <ModelVisual3D x:Name="ContentVisual" />
+                                <visuals:WireframeVisual3D
+                                 x:Name="ContentWireframeVisual"
+                                 LineColor="Black"
+                                 LineThickness="0.1"
+                                 ShowPolygonLines="True"
+                                 UseModelColor="False"
+                                 WireframeType="WireframeWithOriginalSolidModel"
+                                 />
+                            </Viewport3D>
+                        </dxControls:DXViewportView>
+                    </Border>
+
+                    <cameras:TargetPositionCamera
+                     Name="Camera1"
+                     Attitude="-20"
+                     Bank="0"
+                     Distance="200"
+                     Heading="230"
+                     ShowCameraLight="Always"
+                     TargetPosition="0 0 0"
+                     TargetViewport3D="{Binding ElementName=MainViewport}"
+                     />
+
+                    <ab3d:MouseCameraController
+                     Name="MouseCameraController1"
+                     EventsSourceElement="{Binding ElementName=ViewportBorder}"
+                     MoveCameraConditions="LeftMouseButtonPressed, ControlKey"
+                     RotateCameraConditions="LeftMouseButtonPressed"
+                     TargetCamera="{Binding ElementName=Camera1}"
+                     />
+
+                    <ab3d:CameraAxisPanel
+                     HorizontalAlignment="Left"
+                     VerticalAlignment="Bottom"
+                     TargetCamera="{Binding ElementName=Camera1}"
+                     />
+
+                    <StackPanel
+                     HorizontalAlignment="Stretch"
+                     VerticalAlignment="Top"
+                     Orientation="Vertical"
+                     >
+
+
+                        <Expander
+                         Header="Assimp info"
+                         IsExpanded="False"
+                         Style="{StaticResource BaseStyle}"
+                         Visibility="Collapsed"
+                         >
+                            <TextBlock
+                             Name="FileFormatsTextBlock"
+                             Margin="10,5,10,0"
+                             Text=""
+                             TextWrapping="Wrap"
+                             />
+                        </Expander>
+                    </StackPanel>
+
+                    <Border
+                     Margin="5"
+                     HorizontalAlignment="Right"
+                     VerticalAlignment="Bottom"
+                     Background="#55FFFFFF"
+                     BorderBrush="Black"
+                     BorderThickness="2"
+                     Visibility="Collapsed"
+                     >
+                        <StackPanel Margin="10,5" Orientation="Vertical">
+
+                            <Button
+                             Name="LoadButton"
+                             Height="26"
+                             Margin="0,10,0,0"
+                             Click="LoadButton_OnClick"
+                             Content="Load file"
+                             IsDefault="True"
+                             />
+
+                            <TextBlock
+                             Margin="0,10,0,0"
+                             VerticalAlignment="Center"
+                             FontWeight="Bold"
+                             Text="(or drag and drop 3D model file)"
+                             />
+
+                            <CheckBox
+                             Name="ShowWireframeCheckBox"
+                             Margin="0,10,0,0"
+                             Checked="OnShowWireframeCheckBoxCheckedChanged"
+                             Content="Show wireframe"
+                             IsChecked="True"
+                             Unchecked="OnShowWireframeCheckBoxCheckedChanged"
+                             />
+                            <CheckBox
+                             Name="AddLineDepthBiasCheckBox"
+                             Margin="0,4,0,0"
+                             Checked="OnAddLineDepthBiasCheckBoxCheckedChanged"
+                             Content="Add line depth bias (DXEngine only)"
+                             IsChecked="True"
+                             IsEnabled="{Binding ElementName=ShowWireframeCheckBox, Path=IsChecked}"
+                             Unchecked="OnAddLineDepthBiasCheckBoxCheckedChanged"
+                             />
+                            <CheckBox
+                             Name="ReadPolygonIndicesCheckBox"
+                             Margin="0,4,0,0"
+                             Checked="OnReadPolygonIndicesCheckBoxCheckedChanged"
+                             Content="Read PolygonIndices"
+                             IsChecked="True"
+                             ToolTip="When checked ReaderObj will read PolygonIndices collection that can be used to show polygons instead of triangles. Object need to be shown with wireframe to see the difference."
+                             Unchecked="OnReadPolygonIndicesCheckBoxCheckedChanged"
+                             />
+
+                            <Button
+                             Name="ShowInfoButton"
+                             Margin="0,20,0,0"
+                             Click="ShowInfoButton_OnClick"
+                             Content="Show objects info"
+                             IsEnabled="False"
+                             />
+                        </StackPanel>
+                    </Border>
+                </Grid>
                 <Border
                  Margin="3,3,3,3"
                  Padding="0"
