--- a/WolvenKit/Views/Shell/StatusBarView.xaml
+++ b/WolvenKit/Views/Shell/StatusBarView.xaml
@@ -2,6 +2,7 @@
  x:Class="WolvenKit.Views.Shell.StatusBarView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+ xmlns:Fluent="urn:fluent-ribbon"
  xmlns:WolvenKit="clr-namespace:WolvenKit"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,6 +12,8 @@
  xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
  xmlns:orchestra="http://schemas.wildgums.com/orchestra"
  xmlns:orctheming="http://schemas.wildgums.com/orc/theming"
+ Width="auto"
+ HorizontalAlignment="Stretch"
  mc:Ignorable="d"
  >
 
@@ -20,50 +23,63 @@
                 <hc:ThemeResources RequestedTheme="Dark" />
                 <hc:Theme />
             </ResourceDictionary.MergedDictionaries>
-            <Style TargetType="{x:Type StackPanel}">
-                <Setter Property="Orientation" Value="Horizontal" />
-                <Setter Property="HorizontalAlignment" Value="Right" />
-            </Style>
+
             <catel:BooleanToCollapsingVisibilityConverter x:Key="BooleanToCollapsingVisibilityConverter" />
         </ResourceDictionary>
     </catel:UserControl.Resources>
 
-    <hc:UniformSpacingPanel Height="30" Margin="-5,-13,0,-15">
-        <hc:UniformSpacingPanel.LayoutTransform>
-            <ScaleTransform ScaleX="0.85" ScaleY="0.85" />
-
-        </hc:UniformSpacingPanel.LayoutTransform>
+    <Fluent:StatusBar Background="Transparent">
 
 
-        <hc:Tag
-         Height="28"
-         Margin="15,0,15,0"
-         hc:TitleElement.Background="{DynamicResource RegionBrush}"
-         Background="{DynamicResource GrayBrush10}"
-         Content="{Binding CurrentProject}"
-         FontSize="11"
-         ShowCloseButton="False"
+        <Fluent:StatusBarItem
+         Title="Second left placed item"
+         HorizontalAlignment="Left"
+         ToolTip="Your ToolTip"
+         Value="Value shown in ContextMenu"
          >
-            <hc:Tag.Header>
-                <iconPacks:PackIconFontAwesome Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="ProjectDiagramSolid" />
-            </hc:Tag.Header>
+            <hc:Tag
+             Height="28"
+             Margin="15,0,15,0"
+             hc:TitleElement.Background="{DynamicResource RegionBrush}"
+             Background="{DynamicResource GrayBrush10}"
+             Content="{Binding CurrentProject}"
+             FontSize="11"
+             ShowCloseButton="False"
+             >
+                <hc:Tag.Header>
+                    <iconPacks:PackIconFontAwesome Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="ProjectDiagramSolid" />
+                </hc:Tag.Header>
 
-        </hc:Tag>
+            </hc:Tag>
+        </Fluent:StatusBarItem>
 
-        <hc:Tag
-         Height="28"
-         Margin="0"
-         hc:TitleElement.Background="{DynamicResource RegionBrush}"
-         Background="{DynamicResource GrayBrush10}"
-         Content="0.8.0.1-Beta"
-         FontSize="11"
-         ShowCloseButton="False"
+        <Fluent:StatusBarItem
+         Title="Item placed on the right side"
+         HorizontalAlignment="Right"
+         Value="Your value which is also used as content if no content is set."
          >
-            <hc:Tag.Header>
-                <iconPacks:PackIconCodicons Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="Versions" />
-            </hc:Tag.Header>
+            <hc:Tag
+             Height="28"
+             Margin="0"
+             hc:TitleElement.Background="{DynamicResource RegionBrush}"
+             Background="{DynamicResource GrayBrush10}"
+             Content="0.8.0.1-Beta"
+             FontSize="11"
+             ShowCloseButton="False"
+             >
+                <hc:Tag.Header>
+                    <iconPacks:PackIconCodicons Foreground="{DynamicResource MahApps.Brushes.AccentBase}" Kind="Versions" />
+                </hc:Tag.Header>
 
-        </hc:Tag>
+            </hc:Tag>
+        </Fluent:StatusBarItem>
+    </Fluent:StatusBar>
 
-    </hc:UniformSpacingPanel>
+
+
+
+
+
+
+
 </catel:UserControl>
