Audio Tool + Video Tool in ribbon + proper commands

--- a/WolvenKit/Views/Shell/RibbonView.xaml
+++ b/WolvenKit/Views/Shell/RibbonView.xaml
@@ -438,7 +438,7 @@
                     <fluent:Button
                      Command="{catel:CommandManagerBinding Application.ShowAudioTool}"
                      Header="Audio Tool"
-                     Visibility="Collapsed"
+                     Visibility="Visible"
                      >
                         <fluent:Button.LargeIcon>
                             <iconPacks:PackIconBootstrapIcons
@@ -447,6 +447,22 @@
                              HorizontalAlignment="Center"
                              VerticalAlignment="Stretch"
                              Kind="Soundwave"
+                             />
+                        </fluent:Button.LargeIcon>
+                    </fluent:Button>
+
+                    <fluent:Button
+                     Command="{catel:CommandManagerBinding Application.ShowVideoTool}"
+                     Header="Video Tool"
+                     Visibility="Visible"
+                     >
+                        <fluent:Button.LargeIcon>
+                            <iconPacks:PackIconBootstrapIcons
+                             Width="25"
+                             Height="25"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Stretch"
+                             Kind="CameraVideo"
                              />
                         </fluent:Button.LargeIcon>
                     </fluent:Button>
